[tool.poetry]
name = "finalproject-rumyancev-m25-555"
version = "0.1.0"
description = ""
authors = ["Sergey Rumyancev <133sergey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = []
